--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "next.config.mjs", "use": "@vercel/next" }
+    { "src": "package.json", "use": "@vercel/next" }
   ]
 }
